opam-version: "2.0"
synopsis: "Generate useful code for stats gathering from records of counters"
description: ""
version: "0.1"
maintainer: "Ahrefs Pte Ltd <github@ahrefs.com>"
authors: "Ahrefs Pte Ltd <github@ahrefs.com>"
homepage: "https://github.com/ahrefs/ppx_counters"
bug-reports: "https://github.com/ahrefs/ppx_counters/issues"
depends: [
  "dune" {>= "2.7"}
  "ppxlib" {>= "0.23.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
  ]
]
